@@ -155,6 +155,7 @@ ID_PRINT_MODE    = wx.NewId()
 ID_TRANSPARENCY  = wx.NewId()
 ID_PREF_SPOS     = wx.NewId()
 ID_PREF_UPDATE_BAR = wx.NewId()
+ID_PREF_WARN_EOL = wx.NewId()
 ID_SESSION       = wx.NewId()
 
 # View Menu IDs
@@ -280,51 +281,52 @@ PRINT_NORMAL      = 4
 # Dictionary to map object ids to Profile keys
 ID_2_PROF = {
              ID_PREF_AALIAS       : 'AALIASING',
+             ID_TRANSPARENCY      : 'ALPHA',
+             ID_PREF_UNINDENT     : 'BSUNINDENT',
              ID_APP_SPLASH        : 'APPSPLASH',
              ID_AUTOCOMP          : 'AUTO_COMP',
              ID_AUTOINDENT        : 'AUTO_INDENT',
+             ID_PREF_AUTOTRIM     : 'AUTO_TRIM_WS',
              ID_BRACKETHL         : 'BRACKETHL',
              ID_PREF_CHKMOD       : 'CHECKMOD',
              ID_PREF_CHKUPDATE    : 'CHECKUPDATE',
              ID_FOLDING           : 'CODE_FOLD',
+             ID_PREF_DLEXER       : 'DEFAULT_LEX',
              ID_PERSPECTIVES      : 'DEFAULT_VIEW',
-             ID_KWHELPER          : 'KWHELPER',
+             ID_PREF_EDGE         : 'EDGE',
+             ID_PREF_ENCODING     : 'ENCODING',
              ID_EOL_MODE          : 'EOL',
              ID_PREF_FHIST        : 'FHIST_LVL',
-             ID_HLCARET_LINE      : 'HLCARETLINE',
              ID_INDENT_GUIDES     : 'GUIDES',
-             ID_KEY_PROFILES      : 'KEY_PROFILE',
-             ID_PREF_LANG         : 'LANG',
-             ID_REPORTER          : 'REPORTER',
-             ID_SYNTAX            : 'SYNTAX',
-             ID_PREF_AUTOTRIM     : 'AUTO_TRIM_WS',
-             ID_PREF_DLEXER       : 'DEFAULT_LEX',
-             ID_PREF_ENCODING     : 'ENCODING',
-             ID_PREF_SYNTHEME     : 'SYNTHEME',
-             ID_PREF_TABS         : 'USETABS',
-             ID_PREF_UNINDENT     : 'BSUNINDENT',
-             ID_PREF_TABICON      : 'TABICONS',
-             ID_PREF_TABW         : 'TABWIDTH',
+             ID_HLCARET_LINE      : 'HLCARETLINE',
+             ID_PREF_ICON         : 'ICONS',
+             ID_PREF_ICONSZ       : 'ICON_SZ',
              ID_PREF_INDENTW      : 'INDENTWIDTH',
+             ID_KEY_PROFILES      : 'KEY_PROFILE',
+             ID_KWHELPER          : 'KWHELPER',
+             ID_PREF_LANG         : 'LANG',
+             ID_PREF_MODE         : 'MODE',
+             ID_NEW_WINDOW        : 'OPEN_NW',
+             ID_PRINT_MODE        : 'PRINT_MODE',
+             ID_REPORTER          : 'REPORTER',
+             ID_PREF_SPOS         : 'SAVE_POS',
              ID_SESSION           : 'SAVE_SESSION',
+             ID_PREF_WPOS         : 'SET_WPOS',
+             ID_PREF_WSIZE        : 'SET_WSIZE',
              ID_SHOW_EDGE         : 'SHOW_EDGE',
              ID_SHOW_EOL          : 'SHOW_EOL',
              ID_SHOW_LN           : 'SHOW_LN',
              ID_SHOW_WS           : 'SHOW_WS',
-             ID_TRANSPARENCY      : 'ALPHA',
-             ID_WORD_WRAP         : 'WRAP',
-             ID_PREF_EDGE         : 'EDGE',
-             ID_PREF_SPOS         : 'SAVE_POS',
-             ID_PREF_WSIZE        : 'SET_WSIZE',
-             ID_PREF_WPOS         : 'SET_WPOS',
-             ID_PREF_ICON         : 'ICONS',
-             ID_PREF_ICONSZ       : 'ICON_SZ',
-             ID_PREF_MODE         : 'MODE',
-             ID_PRINT_MODE        : 'PRINT_MODE',
-             ID_NEW_WINDOW        : 'OPEN_NW',
              ID_SHOW_SB           : 'STATBAR',
+             ID_SYNTAX            : 'SYNTAX',
+             ID_PREF_SYNTHEME     : 'SYNTHEME',
+             ID_PREF_TABICON      : 'TABICONS',
+             ID_PREF_TABW         : 'TABWIDTH',
+             ID_VIEW_TOOL         : 'TOOLBAR',
+             ID_PREF_TABS         : 'USETABS',
              ID_VI_MODE           : 'VI_EMU',
-             ID_VIEW_TOOL         : 'TOOLBAR'
+             ID_PREF_WARN_EOL     : 'WARN_EOL',
+             ID_WORD_WRAP         : 'WRAP',
 }
 
 # Default Plugins
